syntax = "proto3";

option csharp_namespace = "ClientServiceProtos";

package ClientServiceProtos;


service ClientService{

        rpc Get(GetClientRequest) returns (GetClientResponse);
}

message GetClientRequest{
    string Email = 1;

}

message GetClientResponse{
    int32 id = 1;
    int32 ErrorCode = 2;
    string ErrorMessage = 3;
}

